# appjaillauncher-rs

./: .gitignore  Cargo.toml  README.md  build.rs
example/: CMakeLists.txt  main.cc  utils.cc  utils.h
src/: acl.rs  appcontainer.rs  asw.rs  main.rs  tests.rs  utils.rs
unittest_support/: key2.txt
unittest_support/pub/: key2.txt
