[package]
name = "appjaillauncher-rs"
version = "0.1.0"
authors = ["yying <andy@trailofbits.com>"]

[build-dependencies]
vergen = "0.1.1"

[dependencies]
winapi = "0.2"
kernel32-sys = "0.2"
ws2_32-sys = "0.2"
field-offset = "0.1.1"
libc = "0.2.22"
widestring = "0.2.2"
tempdir = "0.3.5"
clap = "2.24.2"
log = "0.3.8"
env_logger = "0.4.3"